<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.asiantech.training.DemoIntentFilter">

    <Button
        android:id="@+id/Btncall"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_call" />

    <Button
        android:id="@+id/Btnmessage"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Btncall"
        android:layout_toRightOf="@+id/Btncall"
        android:text="@string/btn_message"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/BtnsendEmail"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Btnmessage"
        android:layout_toRightOf="@+id/Btnmessage"
        android:text="@string/btn_sendMail" />

    <Button
        android:id="@+id/BtnlaunchWeb"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnopenGGstore"
        android:text="@string/btn_launchWeb" />

    <Button
        android:id="@+id/BtnopenGGstore"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btncall"
        android:text="@string/btn_openGGstore" />

    <Button
        android:id="@+id/BtnopenGGplay"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btnmessage"
        android:layout_toEndOf="@+id/BtnopenGGstore"
        android:layout_toRightOf="@+id/BtnopenGGstore"
        android:text="@string/btn_openGGmap" />

    <Button
        android:id="@+id/BtnopenGallery"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnsendEmail"
        android:layout_toEndOf="@+id/BtnopenGGplay"
        android:layout_toRightOf="@+id/BtnopenGGplay"
        android:text="@string/btn_openGallery" />

    <Button
        android:id="@+id/Btncamera"
        style="@style/activity_demo_intent"
        android:layout_width="@dimen/activity_demo_intent_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnopenGallery"
        android:layout_toRightOf="@+id/BtnlaunchWeb"
        android:layout_toEndOf="@+id/BtnlaunchWeb"
        android:text="@string/btn_camera" />

    <ImageView
        android:layout_below="@+id/BtnlaunchWeb"
        android:layout_centerHorizontal="true"
        style="@style/activity_demo_img_style" />
</RelativeLayout>
